# Hydrogen

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: file_io.rs  huffman.rs  lib.rs  main.rs  rle.rs  utils.rs
tests/: cli.rs  roundtrip.rs
tests/fixtures/input_files/: test2.txt
tests/fixtures/output_files/compressed/: newtest.h2  test.h2  test2.h2
tests/fixtures/output_files/decompressed/: test2_decompressed.txt
tests/input_files/: test.txt  test2.txt
tests/output_files/: test.txt.h2  test.txt.h2_decompressed.txt  test2.h2
