[package]
name = "hydropress"
version = "0.1.2"
edition = "2021"
authors = ["Joel Bonini"]
description = "A fast, lightweight file compression CLI tool using Huffman coding"
license = "MIT"
repository = "https://github.com/kazee72/Hydrogen"
keywords = ["compression", "huffman", "cli"]
categories = ["command-line-utilities", "compression"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"
